# pyiterable

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  IMPROVEMENT_SUGGESTIONS.md  LICENSE  README.md  README.rst  SUGGESTED_FORMATS.md  UNFINISHED_PROPOSALS.md  find_missing_fixtures.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_output.jsonl
.cursor/skills/: README.md
.cursor/skills/database-engine-implementation/: SKILL.md
.cursor/skills/format-implementation/: SKILL.md
.cursor/skills/iterabledata-development/: SKILL.md
.cursor/skills/openspec-workflows/: SKILL.md
.cursor/skills/testing-patterns/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml  python-publish.yml  release.yml  security.yml  test.yml
dev/: codec_init_analysis.md  factory_method_design.md  write_implementation_audit.txt
dev/benchmarks/: bench_import_open.py  bench_memory_usage.py
dev/scripts/: find_missing_fixtures.py  inspect_zip.py  verify_output.py
docs/: .eslintrc.js  .prettierrc  DOCUMENTATION_IMPROVEMENTS.md  GITHUB_PAGES_SETUP.md  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/api/: ai.md  async.md  base-iterable.md  capabilities.md  cloud-storage.md  convert.md  database-engines.md  dataframe-bridges.md  engines.md  exceptions.md  ingest.md  observability.md  open-iterable.md  ops-filter.md  ops-inspect.md  ops-schema.md  ops-stats.md  ops-transform.md  pipeline.md  plugins.md  type-system.md  validate.md
docs/docs/development/: type-stubs.md
docs/docs/formats/: TEMPLATE.md  annotatedcsv.md  apachelog.md  arrow.md  asn1.md  avro.md  beam.md  bencode.md  bson.md  capnp.md  (+77 more)
docs/integrations/: AI_FRAMEWORKS.md  CLAUDE.md  GEMINI.md  OPENAI.md
examples/converter/: convert.py
examples/elasticsearch/: README.md  convert_to_jsonl.py  convert_to_jsonl_zst.py  convert_to_parquet.py  iterate.py
examples/mongodb/: README.md  convert_to_jsonl.py  convert_to_jsonl_zst.py  convert_to_parquet.py  inddata.jsonl.zst  iterate.py
examples/simplewiki/: README.md  convert.py  convert_parquet.py  enrich.py
examples/warc/: README.md  convert_to_jsonl.py  convert_to_parquet.py
examples/zipxml/: README.md  process_rmsp_zip.py
iterable/: __init__.py  async_base.py  base.py  exceptions.py  types.py
iterable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iterable/ai/: __init__.py  doc.py  providers.py
iterable/codecs/: 7zcodec.py_  __init__.py  brotlicodec.py  bz2codec.py  gzipcodec.py  lz4codec.py  lzmacodec.py  lzocodec.py  rawcodec.py  snappycodec.py  szipcodec.py  zipcodec.py  zstdcodec.py
iterable/convert/: __init__.py  core.py
iterable/datatypes/: __init__.py  annotatedcsv.py  apachelog.py  arff.py  arrow.py  asn1.py  avro.py  beam.py  bencode.py  bsonf.py  capnp.py  cbor.py  cdx.py  cef.py  csv.py  csvw.py  dbf.py  delta.py  duckdb.py  dxf.py  edn.py  eml.py  feed.py  flatbuffers.py  flexbuffers.py  flink.py  fwf.py  gelf.py  geojson.py  geopackage.py  gml.py  hdf5.py  hocon.py  html.py  hudi.py  ical.py  iceberg.py  ilp.py  ini.py  ion.py  (+55 more)
iterable/db/: __init__.py  base.py  clickhouse.py  elasticsearch.py  iterable.py  mongo.py  mssql.py  mysql.py  pooling.py  postgres.py  sqlite.py
iterable/engines/: __init__.py  duckdb.py
iterable/helpers/: __init__.py  async_detect.py  bridges.py  capabilities.py  debug.py  detect.py  progress.py  read_ahead.py  schema.py  structured_logging.py  typed.py  utils.py  validation.py
iterable/ingest/: __init__.py  core.py  duckdb.py  elasticsearch.py  mongodb.py  mysql.py  postgresql.py  sqlite.py
iterable/ops/: __init__.py  filter.py  inspect.py  schema.py  stats.py  transform.py
iterable/pipeline/: __init__.py  core.py
iterable/plugins/: __init__.py  loader.py  registry.py
iterable/validate/: __init__.py  core.py  rules.py
openspec/: project.md
testdata/: test_annotated_types.csv  test_debug.warc  test_simple.warc  test_write_annotated.csv
tests/: conftest.py  create_compression_fixtures.py  create_dbf_fixture.py  fixdata.py  test_7z.py  test_ai.py  test_annotatedcsv.py  test_apachelog.py  test_arff.py  test_arrow.py  test_asn1.py  test_async_support.py  test_avro.py  test_base.py  test_benchmarks.py  test_bencode.py  test_brotli.py  test_bson.py  test_bulk_operations_optimization.py  test_bzip2.py  test_capabilities.py  test_capnp.py  test_cbor.py  test_cdx.py  test_cef.py  test_cloud_storage.py  test_codecs_init.py  test_concurrent_access.py  test_connection_pooling.py  test_convert.py  test_csv.py  test_csvw.py  test_dataframe_bridges.py  test_db_engines.py  test_dbf.py  test_debug_mode.py  test_delta.py  test_detect.py  test_duckdb.py  test_duckdb_format.py  (+102 more)
tests/extra/: extra_parquet.py
tests/fixtures/: 2cols6rows.arrow  2cols6rows.avro.br  2cols6rows.csv-metadata.json  2cols6rows.csv.snappy  2cols6rows.dbf  2cols6rows.fwf  2cols6rows.geojson  2cols6rows.gml  2cols6rows.kml  2cols6rows.ltsv  2cols6rows.px  2cols6rows.toml  2cols6rows_array.json.br  2cols6rows_array.jsonld  2cols6rows_flat.bson.br  2cols6rows_flat.jsonld  2cols6rows_flat.ndjson.br  2cols6rows_flat.yaml  2cols6rows_graph.jsonld  2cols6rows_tag.json.br  multi_sheet.xlsx  ru_utf8_comma.csv.zst  ru_utf8_semicolon.csv.zst  sample.warc.parquet
tests/testdata/: 2cols6rows.orc  2cols6rows.parquet  2cols6rows_jsonl.orc  2cols6rows_orc.csv  2cols6rows_test.arrow  2cols6rows_test.csv.br  2cols6rows_test.csv.bz2  2cols6rows_test.csv.lz4  2cols6rows_test.csv.snappy  2cols6rows_test.csv.xz  2cols6rows_test.csv.zst  2cols6rows_test.csvw  2cols6rows_test.geojson  2cols6rows_test.gml  2cols6rows_test.jsonld  2cols6rows_test.kml  2cols6rows_test.msgpack  2cols6rows_xls.jsonl  2cols6rows_xlsx.jsonl.bz2  ru_cp1251_comma_converted.jsonl  ru_cp1251_comma_converted.parquet  test_7z.7z  test_7z_read.7z  test_7z_reset.7z  test_annotated.csv  test_annotated_bulk.csv  test_annotated_defaults.csv  test_asn1_reset.der  test_ilp.ilp  test_ilp_bulk.ilp  test_mysqldump_bulk.sql  test_mysqldump_read.sql  test_vortex_totals.vortex  test_warc_roundtrip.warc  test_write_annotated.csv
(+156 files in other folders)
